--- a/sass/blocks/_membership.scss
+++ b/sass/blocks/_membership.scss
@@ -93,7 +93,7 @@
         padding: 0 39px;
         margin-top: 0;
         margin-bottom: 40px;
-        @include max-screen(767px) {
+        @include max-screen(1024px) {
           margin-bottom: 20px;
           padding: 0;
         }
@@ -180,9 +180,6 @@
           background-color: $orange_color;
           color: $white_color;
           border-color: transparent;
-          &:hover {
-            background-color: #e57b15;
-          }
         }
         &:last-of-type {
           .available-icon {
